--- a/elektrikli-forklift.html
+++ b/elektrikli-forklift.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Elektrikli Forklift</title>
+  <title>Akülü-Lityum Forklift</title>
 
   <meta
     content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
@@ -166,8 +166,8 @@
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -195,7 +195,7 @@
                 <li class="dropdown">
                   <a href="product.html">ÜRÜNLERİMİZ</a>
                   <ul>
-                    <li><a href="elektrikli-forklift.html">ELEKTRİKLİ FORKLİFT</a></li>
+                    <li><a href="elektrikli-forklift.html">AKÜLÜ-LİTYUM FORKLİFT</a></li>
                     <li>
                       <a href="dizel-forklift.html">DİZEL FORKLİFT</a>
                     </li>
@@ -250,10 +250,10 @@
       <div class="page-header__bg" style="background-image: url(assets/images/resources/s-1.webp);"></div>
       <!-- /.page-header__bg -->
       <div class="container">
-        <h2 class="page-header__title">ELEKTRİKLİ FORKLİFT</h2>
+        <h2 class="page-header__title">AKÜLÜ-LİTYUM FORKLİFT</h2>
         <ul class="boskery-breadcrumb list-unstyled">
           <li><a href="/">aNASAYFA</a></li>
-          <li><span>ELEKTRİKLİ FORKLİFT</span></li>
+          <li><span>AKÜLÜ-LİTYUM FORKLİFT</span></li>
         </ul><!-- /.thm-breadcrumb list-unstyled -->
       </div><!-- /.container -->
     </section><!-- /.page-header -->
@@ -265,7 +265,7 @@
             <aside class="product__sidebar">
 
               <div class="product__categories product__sidebar__item">
-                <h3 class="product__sidebar__title product__categories__title">ELEKTRİKLİ FORKLİFT</h3>
+                <h3 class="product__sidebar__title product__categories__title">AKÜLÜ-LİTYUM FORKLİFT</h3>
                 <ul class="list-unstyled">
                   <li><a href="shop-details.html">HT - 1,5 T</a></li>
                   <li><a href="shop-details.html">HT - 2,0 T</a></li>
@@ -292,11 +292,12 @@
 
                 <div class="product__item__content">
 
-                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht1,5t.html">Elektrİklİ Forklİft HT 1.5
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht1,5t.html">AKÜLÜ-LİTYUM Forklİft HT
+                      1.5
                       T</a></h4>
                   <br>
                   <!-- /.product-title -->
-                  <div class="product__item__price">Yükleme Kapasitesi - 1500 Kg </div>
+                  <div class="product__item__price">Yükleme Kapasitesi - 1.500 Kg </div>
                   <div class="product__item__price1">Yükseklik - 1990 mm</div>
                   <div class="product__item__price">Teker - 4</div>
                   <a href="elektrikli-forklift-ht1,5t.html" class="boskery-btn product__item__link">
@@ -324,11 +325,12 @@
                 </div>
                 <div class="product__item__content">
 
-                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht2,0t.html">Elektrİklİ Forklİft HT 2.0
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht2,0t.html">AKÜLÜ-LİTYUM Forklİft HT
+                      2.0
                       T</a></h4>
                   <br>
                   <!-- /.product-title -->
-                  <div class="product__item__price">Yükleme Kapasitesi - 2000 Kg </div>
+                  <div class="product__item__price">Yükleme Kapasitesi - 2.000 Kg </div>
                   <div class="product__item__price1">Yükseklik - 2080mm</div>
                   <div class="product__item__price">Teker - 4</div>
                   <a href="elektrikli-forklift-ht2,0t.html" class="boskery-btn product__item__link">
@@ -356,11 +358,11 @@
                 </div>
                 <div class="product__item__content">
 
-                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht2,5t-b.html">Elektrİklİ Forklİft HT
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht2,5t-b.html">AKÜLÜ-LİTYUM Forklİft HT
                       2.5 T - B</a></h4>
                   <br>
                   <!-- /.product-title -->
-                  <div class="product__item__price">Yükleme Kapasitesi - 2500 Kg </div>
+                  <div class="product__item__price">Yükleme Kapasitesi - 2.500 Kg </div>
                   <div class="product__item__price1">Yükseklik - 2180 mm</div>
                   <div class="product__item__price">Teker - 4</div>
                   <a href="elektrikli-forklift-ht2,5t-b.html" class="boskery-btn product__item__link">
@@ -388,11 +390,11 @@
                 </div>
                 <div class="product__item__content">
 
-                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht3,0t-b.html">Elektrİklİ Forklİft HT
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht3,0t-b.html">AKÜLÜ-LİTYUM Forklİft HT
                       3.0 T - B</a></h4>
                   <br>
                   <!-- /.product-title -->
-                  <div class="product__item__price">Yükleme Kapasitesi - 3000 Kg </div>
+                  <div class="product__item__price">Yükleme Kapasitesi - 3.000 Kg </div>
                   <div class="product__item__price1">Yükseklik - 2180 mm</div>
                   <div class="product__item__price">Teker - 4</div>
                   <a href="elektrikli-forklift-ht3,0t-b.html" class="boskery-btn product__item__link">
@@ -420,7 +422,8 @@
                 </div>
                 <div class="product__item__content">
 
-                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht3,5t.html">Elektrİklİ Forklİft HT 3.5
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht3,5t.html">AKÜLÜ-LİTYUM Forklİft HT
+                      3.5
                       T</a></h4>
                   <br>
                   <!-- /.product-title -->
@@ -428,6 +431,69 @@
                   <div class="product__item__price1">Yükseklik - 2180 mm</div>
                   <div class="product__item__price">Teker - 4</div>
                   <a href="elektrikli-forklift-ht3,5t.html" class="boskery-btn product__item__link">
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__text">DETAYLAR</span>
+                    <i class="icon-arrow-right"></i>
+                  </a>
+                </div><!-- /.product-content -->
+              </div><!-- /.product-item -->
+            </div><!-- /.col-xl-4 col-sm-6 -->
+            <div class="col-xl-4 col-sm-6">
+              <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                <div class="gallery-page__card">
+                  <img src="assets/images/products/ef-5.0t.webp" alt="akulu-istifleme-makinesi">
+                  <div class="gallery-page__card__hover">
+                    <a href="assets/images/products/ef-5.0t.webp" class="img-popup">
+                      <span class="gallery-page__card__icon"></span>
+                    </a>
+                  </div><!-- /.gallery-page__card__hover -->
+                </div>
+                <div class="product__item__content">
+
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht5.0t.html">AKÜLÜ-LİTYUM Forklİft 5.0
+                      T LI-ION</a></h4>
+                  <br>
+                  <!-- /.product-title -->
+                  <div class="product__item__price">Yükleme Kapasitesi - 5.000 Kg </div>
+                  <div class="product__item__price1">Yükseklik - 3000 mm</div>
+                  <div class="product__item__price">Teker - 4</div>
+                  <a href="elektrikli-forklift-ht5.0t.html" class="boskery-btn product__item__link">
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__hover"></span>
+                    <span class="boskery-btn__text">DETAYLAR</span>
+                    <i class="icon-arrow-right"></i>
+                  </a>
+                </div><!-- /.product-content -->
+              </div><!-- /.product-item -->
+            </div><!-- /.col-xl-4 col-sm-6 -->
+            <div class="col-xl-4 col-sm-6">
+              <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                <div class="gallery-page__card">
+                  <img src="assets/images/products/ef-10t.webp" alt="akulu-istifleme-makinesi">
+                  <div class="gallery-page__card__hover">
+                    <a href="assets/images/products/ef-10t.webp" class="img-popup">
+                      <span class="gallery-page__card__icon"></span>
+                    </a>
+                  </div><!-- /.gallery-page__card__hover -->
+                </div>
+                <div class="product__item__content">
+
+                  <h4 class="product__item__title"><a href="elektrikli-forklift-ht10t.html">AKÜLÜ-LİTYUM Forklİft 10 T <br>LI-ION</a></h4>
+                  <br>
+                  <!-- /.product-title -->
+                  <div class="product__item__price">Yükleme Kapasitesi - 10.000 Kg </div>
+                  <div class="product__item__price1">Yükseklik - 3000 mm</div>
+                  <div class="product__item__price">Teker - 4</div>
+                  <a href="elektrikli-forklift-ht10t.html" class="boskery-btn product__item__link">
                     <span class="boskery-btn__hover"></span>
                     <span class="boskery-btn__hover"></span>
                     <span class="boskery-btn__hover"></span>
@@ -497,7 +563,7 @@
               <h2 class="footer-widget__title">ÜRÜNLERİMİZ</h2>
               <!-- /.footer-widget__title -->
               <ul class="list-unstyled footer-widget__links">
-                <li><a href="elektrikli-forklift.html">Elektrikli Forklift</a></li>
+                <li><a href="elektrikli-forklift.html">Akülü-Lityum Forklift</a></li>
                 <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
                 <li><a href="ekskavator.html">Ekskavatör</a></li>
                 <li><a href="makasli-kaldirma-platformu.html">Makaslı Kaldırma Platformu</a></li>
@@ -524,11 +590,11 @@
                   </li>
                   <li>
                     <span class="icon-phone-call"></span>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                   </li>
                   <li>
                     <span class="icon-phone-call"></span>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                   </li>
                 </ul>
                 <!-- /.list-unstyled footer-widget__info -->
@@ -656,11 +722,11 @@
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905335742631">0533 574 2631</a>
+          <a href="tel:+905342456030">0534 245 6030</a>
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905342456030">0534 245 6030</a>
+          <a href="tel:+905335742631">0533 574 2631</a>
         </li>
       </ul>
       <!-- /.mobile-nav__contact -->
@@ -734,11 +800,11 @@
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905335742631">0533 574 2631</a>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905342456030">0534 245 6030</a>
+            <a href="tel:+905335742631">0533 574 2631</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
