--- a/en-akulu-istifleme-makinesi.html
+++ b/en-akulu-istifleme-makinesi.html
@@ -167,8 +167,8 @@
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">CALL US</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -196,7 +196,7 @@
                                 <li class="dropdown">
                                     <a href="en-product.html">PRODUCTS</a>
                                     <ul>
-                                        <li><a href="en-elektrikli-forklift.html">ELECTRIC FORKLIFT</a></li>
+                                        <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                         <li>
                                             <a href="en-dizel-forklift.html">DIESEL FORKLIFT</a>
                                         </li>
@@ -667,7 +667,7 @@
                                 <h2 class="footer-widget__title">PRODUCTS</h2>
                                 <!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__links">
-                                    <li><a href="en-elektrikli-forklift.html">Electric Forklift</a></li>
+                                    <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                     <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                     <li><a href="en-ekskavator.html">Excavator</a></li>
                                     <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
@@ -696,11 +696,11 @@
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
                                         </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
@@ -836,11 +836,11 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
             </ul>
             <!-- /.mobile-nav__contact -->
@@ -914,11 +914,11 @@
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905335742631">0533 574 2631</a>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905342456030">0534 245 6030</a>
+                        <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
