--- a/en-elektrikli-forklift-ht3,5t.html
+++ b/en-elektrikli-forklift-ht3,5t.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electric Forklift HT-3.5T</title>
+    <title>Lithium Forklift HT-3.5T</title>
 
     <meta
         content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
@@ -167,8 +167,8 @@
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">CALL US</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -196,7 +196,7 @@
                                 <li class="dropdown">
                                     <a href="en-product.html">PRODUCTS</a>
                                     <ul>
-                                        <li><a href="en-elektrikli-forklift.html">ELECTRIC FORKLIFT</a></li>
+                                        <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                         <li>
                                             <a href="en-dizel-forklift.html">DIESEL FORKLIFT</a>
                                         </li>
@@ -252,10 +252,10 @@
             <div class="page-header__bg" style="background-image: url(assets/images/resources/s-1.webp);"></div>
             <!-- /.page-header__bg -->
             <div class="container">
-                <h2 class="page-header__title">ELECTRIC FORKLIFT HT - 3.5T</h2>
+                <h2 class="page-header__title">Lithium FORKLIFT HT - 3.5T</h2>
                 <ul class="boskery-breadcrumb list-unstyled">
                     <li><a href="en-index.html">HOME</a></li>
-                    <li><span>ELECTRIC FORKLIFT HT - 3.5T</span></li>
+                    <li><span>Lithium FORKLIFT HT - 3.5T</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
         </section><!-- /.page-header -->
@@ -327,7 +327,7 @@
                         <div class="product-details__content">
                             <div class="product-details__top">
                                 <div class="product-details__top__left">
-                                    <h3 class="product-details__name">ELECTRIC FORKLIFT HT - 3.5T</h3>
+                                    <h3 class="product-details__name">Lithium FORKLIFT HT - 3.5T</h3>
                                     <h4 class="product-details__price">3.5 TON</h4>
                                 </div>
                                 <a href="https://www.youtube.com/watch?v=6bL89b5eYnA"
@@ -686,7 +686,7 @@
                                 <h2 class="footer-widget__title">PRODUCTS</h2>
                                 <!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__links">
-                                    <li><a href="en-elektrikli-forklift.html">Electric Forklift</a></li>
+                                    <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                     <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                     <li><a href="en-ekskavator.html">Excavator</a></li>
                                     <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
@@ -715,11 +715,11 @@
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
                                         </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
@@ -855,11 +855,11 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
             </ul>
             <!-- /.mobile-nav__contact -->
@@ -933,11 +933,11 @@
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905335742631">0533 574 2631</a>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905342456030">0534 245 6030</a>
+                        <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
