--- a/en-elektrikli-forklift.html
+++ b/en-elektrikli-forklift.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electric Forklift</title>
+    <title>Lithium Forklift</title>
 
     <meta
         content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
@@ -167,8 +167,8 @@
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">CALL US</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -196,7 +196,7 @@
                                 <li class="dropdown">
                                     <a href="en-product.html">PRODUCTS</a>
                                     <ul>
-                                        <li><a href="en-elektrikli-forklift.html">ELECTRIC FORKLIFT</a></li>
+                                        <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                         <li>
                                             <a href="en-dizel-forklift.html">DIESEL FORKLIFT</a>
                                         </li>
@@ -252,10 +252,10 @@
             <div class="page-header__bg" style="background-image: url(assets/images/resources/s-1.webp);"></div>
             <!-- /.page-header__bg -->
             <div class="container">
-                <h2 class="page-header__title">ELECTRIC FORKLIFT</h2>
+                <h2 class="page-header__title">Lithium FORKLIFT</h2>
                 <ul class="boskery-breadcrumb list-unstyled">
                     <li><a href="en-index.html">HOME</a></li>
-                    <li><span>ELECTRIC FORKLIFT</span></li>
+                    <li><span>Lithium FORKLIFT</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
         </section><!-- /.page-header -->
@@ -267,7 +267,7 @@
             <aside class="product__sidebar">
 
               <div class="product__categories product__sidebar__item">
-                <h3 class="product__sidebar__title product__categories__title">ELECTRIC FORKLIFT</h3>
+                <h3 class="product__sidebar__title product__categories__title">Lithium FORKLIFT</h3>
                 <ul class="list-unstyled">
                   <li><a href="shop-details.html">HT - 1,5 T</a></li>
                   <li><a href="shop-details.html">HT - 2,0 T</a></li>
@@ -295,7 +295,7 @@
                                 <div class="product__item__content">
 
                                     <h4 class="product__item__title"><a
-                                            href="en-elektrikli-forklift-ht1,5t.html">ELECTRIC FORKLIFT HT 1.5
+                                            href="en-elektrikli-forklift-ht1,5t.html">Lithium FORKLIFT HT 1.5
                                             T</a></h4>
                                     <br>
                                     <!-- /.product-title -->
@@ -329,7 +329,7 @@
                                 <div class="product__item__content">
 
                                     <h4 class="product__item__title"><a
-                                            href="en-elektrikli-forklift-ht2,0t.html">ELECTRIC FORKLIFT HT 2.0
+                                            href="en-elektrikli-forklift-ht2,0t.html">Lithium FORKLIFT HT 2.0
                                             T</a></h4>
                                     <br>
                                     <!-- /.product-title -->
@@ -363,7 +363,7 @@
                                 <div class="product__item__content">
 
                                     <h4 class="product__item__title"><a
-                                            href="en-elektrikli-forklift-ht2,5t-b.html">ELECTRIC FORKLIFT HT
+                                            href="en-elektrikli-forklift-ht2,5t-b.html">Lithium FORKLIFT HT
                                             2.5 T - B</a></h4>
                                     <br>
                                     <!-- /.product-title -->
@@ -397,7 +397,7 @@
                                 <div class="product__item__content">
 
                                     <h4 class="product__item__title"><a
-                                            href="en-elektrikli-forklift-ht3,0t-b.html">ELECTRIC FORKLIFT HT
+                                            href="en-elektrikli-forklift-ht3,0t-b.html">Lithium FORKLIFT HT
                                             3.0 T - B</a></h4>
                                     <br>
                                     <!-- /.product-title -->
@@ -431,7 +431,7 @@
                                 <div class="product__item__content">
 
                                     <h4 class="product__item__title"><a
-                                            href="en-elektrikli-forklift-ht3,5t.html">ELECTRIC FORKLIFT HT 3.5
+                                            href="en-elektrikli-forklift-ht3,5t.html">Lithium FORKLIFT HT 3.5
                                             T</a></h4>
                                     <br>
                                     <!-- /.product-title -->
@@ -439,6 +439,74 @@
                                     <div class="product__item__price1">Height - 2180 mm</div>
                                     <div class="product__item__price">Wheel - 4</div>
                                     <a href="en-elektrikli-forklift-ht3,5t.html"
+                                        class="boskery-btn product__item__link">
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__text">DETAILS</span>
+                                        <i class="icon-arrow-right"></i>
+                                    </a>
+                                </div><!-- /.product-content -->
+                            </div><!-- /.product-item -->
+                        </div><!-- /.col-xl-4 col-sm-6 -->
+                        <div class="col-xl-4 col-sm-6">
+                            <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                                <div class="gallery-page__card">
+                                    <img src="assets/images/products/ef-5.0t.webp" alt="akulu-istifleme-makinesi">
+                                    <div class="gallery-page__card__hover">
+                                        <a href="assets/images/products/ef-5.0t.webp" class="img-popup">
+                                            <span class="gallery-page__card__icon"></span>
+                                        </a>
+                                    </div><!-- /.gallery-page__card__hover -->
+                                </div>
+                                <div class="product__item__content">
+
+                                    <h4 class="product__item__title"><a
+                                            href="en-elektrikli-forklift-ht5.0t.html">Lithium FORKLIFT 5.0
+                                            T</a></h4>
+                                    <br>
+                                    <!-- /.product-title -->
+                                    <div class="product__item__price">Loading Capacity - 5.000 Kg </div>
+                                    <div class="product__item__price1">Height - 3000 mm</div>
+                                    <div class="product__item__price">Wheel - 4</div>
+                                    <a href="en-elektrikli-forklift-ht5.0t.html"
+                                        class="boskery-btn product__item__link">
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__hover"></span>
+                                        <span class="boskery-btn__text">DETAILS</span>
+                                        <i class="icon-arrow-right"></i>
+                                    </a>
+                                </div><!-- /.product-content -->
+                            </div><!-- /.product-item -->
+                        </div><!-- /.col-xl-4 col-sm-6 -->
+                        <div class="col-xl-4 col-sm-6">
+                            <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                                <div class="gallery-page__card">
+                                    <img src="assets/images/products/ef-5.0t.webp" alt="akulu-istifleme-makinesi">
+                                    <div class="gallery-page__card__hover">
+                                        <a href="assets/images/products/ef-5.0t.webp" class="img-popup">
+                                            <span class="gallery-page__card__icon"></span>
+                                        </a>
+                                    </div><!-- /.gallery-page__card__hover -->
+                                </div>
+                                <div class="product__item__content">
+
+                                    <h4 class="product__item__title"><a
+                                            href="en-elektrikli-forklift-ht10t.html">Lithium FORKLIFT 10
+                                            T</a></h4>
+                                    <br>
+                                    <!-- /.product-title -->
+                                    <div class="product__item__price">Loading Capacity - 10.000 Kg </div>
+                                    <div class="product__item__price1">Height - 3000 mm</div>
+                                    <div class="product__item__price">Wheel - 4</div>
+                                    <a href="en-elektrikli-forklift-ht10t.html"
                                         class="boskery-btn product__item__link">
                                         <span class="boskery-btn__hover"></span>
                                         <span class="boskery-btn__hover"></span>
@@ -510,7 +578,7 @@
                             <h2 class="footer-widget__title">PRODUCTS</h2>
                             <!-- /.footer-widget__title -->
                             <ul class="list-unstyled footer-widget__links">
-                                <li><a href="en-elektrikli-forklift.html">Electric Forklift</a></li>
+                                <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                                 <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                                 <li><a href="en-ekskavator.html">Excavator</a></li>
                                 <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
@@ -675,11 +743,11 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
             </ul>
             <!-- /.mobile-nav__contact -->
@@ -753,11 +821,11 @@
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905335742631">0533 574 2631</a>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905342456030">0534 245 6030</a>
+                        <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
