--- a/product.html
+++ b/product.html
@@ -166,8 +166,8 @@
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -195,7 +195,7 @@
                 <li class="dropdown">
                   <a href="product.html">ÜRÜNLERİMİZ</a>
                   <ul>
-                    <li><a href="elektrikli-forklift.html">ELEKTRİKLİ FORKLİFT</a></li>
+                    <li><a href="elektrikli-forklift.html">AKÜLÜ-LİTYUM FORKLİFT</a></li>
                     <li>
                       <a href="dizel-forklift.html">DİZEL FORKLİFT</a>
                     </li>
@@ -267,11 +267,12 @@
               <div class="product__categories product__sidebar__item">
                 <h3 class="product__sidebar__title product__categories__title">KATEGORİLER</h3>
                 <ul class="list-unstyled">
-                  <li><a href="elektrikli-forklift.html">Elektrik Forklift</a></li>
-                  <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
-                  <li><a href="ekskavator.html">Ekskavatör</a></li>
+                  <li><a href="elektrikli-forklift.html">Akülü-Lityum Forklift</a></li>
+
                   <li><a href="makasli-kaldirma-platformu.html">Makaslı Kaldırma Platformu</a></li>
                   <li><a href="akulu-istifleme-makinesi.html">Akülü İstifleme Makinesi</a></li>
+                  <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
+                  <li><a href="ekskavator.html">Ekskavatör</a></li>
                 </ul>
               </div><!-- /.category-widget -->
             </aside><!-- /.shop-sidebar -->
@@ -291,61 +292,9 @@
                   </div>
 
                   <div class="product__item__content">
-                    <h4 class="product__item__title"><a href="elektrikli-forklift.html">Elektrİklİ Forklİft</a></h4>
+                    <h4 class="product__item__title"><a href="elektrikli-forklift.html">Akülü-Lİtyum Forklİft</a></h4>
                     <!-- /.product-title -->
                     <a href="elektrikli-forklift.html" class="boskery-btn product__item__link">
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__text">DETAYLAR</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div><!-- /.product-content -->
-                </div><!-- /.product-item -->
-              </div><!-- /.col-xl-4 col-sm-6 -->
-              <div class="col-xl-4 col-sm-6">
-                <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
-                  <div class="gallery-page__card">
-                    <img src="assets/images/products/diesel-forklift.webp" alt="Dizel Forklift">
-                    <div class="gallery-page__card__hover">
-                      <a href="assets/images/products/diesel-forklift.webp" class="img-popup">
-                        <span class="gallery-page__card__icon"></span>
-                      </a>
-                    </div><!-- /.gallery-page__card__hover -->
-                  </div>
-                  <div class="product__item__content">
-                    <h4 class="product__item__title"><a href="dizel-forklift.html">DİZEL Forklİft</a></h4>
-                    <!-- /.product-title -->
-                    <a href="dizel-forklift.html" class="boskery-btn product__item__link">
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__hover"></span>
-                      <span class="boskery-btn__text">DETAYLAR</span>
-                      <i class="icon-arrow-right"></i>
-                    </a>
-                  </div><!-- /.product-content -->
-                </div><!-- /.product-item -->
-              </div><!-- /.col-xl-4 col-sm-6 -->
-              <div class="col-xl-4 col-sm-6">
-                <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='400ms'>
-                  <div class="gallery-page__card">
-                    <img src="assets/images/products/ekskavatör.webp" alt="Ekskavator">
-                    <div class="gallery-page__card__hover">
-                      <a href="assets/images/products/ekskavatör.webp" class="img-popup">
-                        <span class="gallery-page__card__icon"></span>
-                      </a>
-                    </div><!-- /.gallery-page__card__hover -->
-                  </div>
-                  <div class="product__item__content">
-                    <h4 class="product__item__title"><a href="ekskavator.html">Ekskavatör</a></h4>
-                    <!-- /.product-title -->
-                    <a href="ekskavator.html" class="boskery-btn product__item__link">
                       <span class="boskery-btn__hover"></span>
                       <span class="boskery-btn__hover"></span>
                       <span class="boskery-btn__hover"></span>
@@ -400,6 +349,58 @@
                         Makİnesİ</a></h4>
                     <!-- /.product-title -->
                     <a href="akulu-istifleme-makinesi.html" class="boskery-btn product__item__link">
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__text">DETAYLAR</span>
+                      <i class="icon-arrow-right"></i>
+                    </a>
+                  </div><!-- /.product-content -->
+                </div><!-- /.product-item -->
+              </div><!-- /.col-xl-4 col-sm-6 -->
+              <div class="col-xl-4 col-sm-6">
+                <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='200ms'>
+                  <div class="gallery-page__card">
+                    <img src="assets/images/products/diesel-forklift.webp" alt="Dizel Forklift">
+                    <div class="gallery-page__card__hover">
+                      <a href="assets/images/products/diesel-forklift.webp" class="img-popup">
+                        <span class="gallery-page__card__icon"></span>
+                      </a>
+                    </div><!-- /.gallery-page__card__hover -->
+                  </div>
+                  <div class="product__item__content">
+                    <h4 class="product__item__title"><a href="dizel-forklift.html">DİZEL Forklİft</a></h4>
+                    <!-- /.product-title -->
+                    <a href="dizel-forklift.html" class="boskery-btn product__item__link">
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__hover"></span>
+                      <span class="boskery-btn__text">DETAYLAR</span>
+                      <i class="icon-arrow-right"></i>
+                    </a>
+                  </div><!-- /.product-content -->
+                </div><!-- /.product-item -->
+              </div><!-- /.col-xl-4 col-sm-6 -->
+              <div class="col-xl-4 col-sm-6">
+                <div class="product__item wow fadeInUp" data-wow-duration='1500ms' data-wow-delay='400ms'>
+                  <div class="gallery-page__card">
+                    <img src="assets/images/products/ekskavatör.webp" alt="Ekskavator">
+                    <div class="gallery-page__card__hover">
+                      <a href="assets/images/products/ekskavatör.webp" class="img-popup">
+                        <span class="gallery-page__card__icon"></span>
+                      </a>
+                    </div><!-- /.gallery-page__card__hover -->
+                  </div>
+                  <div class="product__item__content">
+                    <h4 class="product__item__title"><a href="ekskavator.html">Ekskavatör</a></h4>
+                    <!-- /.product-title -->
+                    <a href="ekskavator.html" class="boskery-btn product__item__link">
                       <span class="boskery-btn__hover"></span>
                       <span class="boskery-btn__hover"></span>
                       <span class="boskery-btn__hover"></span>
@@ -469,7 +470,7 @@
                 <h2 class="footer-widget__title">ÜRÜNLERİMİZ</h2>
                 <!-- /.footer-widget__title -->
                 <ul class="list-unstyled footer-widget__links">
-                  <li><a href="elektrikli-forklift.html">Elektrikli Forklift</a></li>
+                  <li><a href="elektrikli-forklift.html">Akülü-Lityum Forklift</a></li>
                   <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
                   <li><a href="ekskavator.html">Ekskavatör</a></li>
                   <li><a href="makasli-kaldirma-platformu.html">Makaslı Kaldırma Platformu</a></li>
@@ -496,11 +497,11 @@
                     </li>
                     <li>
                       <span class="icon-phone-call"></span>
-                      <a href="tel:+905335742631">0533 574 2631</a>
+                      <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                     <li>
                       <span class="icon-phone-call"></span>
-                      <a href="tel:+905342456030">0534 245 6030</a>
+                      <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
                   </ul>
                   <!-- /.list-unstyled footer-widget__info -->
@@ -629,11 +630,11 @@
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905335742631">0533 574 2631</a>
+          <a href="tel:+905342456030">0534 245 6030</a>
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905342456030">0534 245 6030</a>
+          <a href="tel:+905335742631">0533 574 2631</a>
         </li>
       </ul>
       <!-- /.mobile-nav__contact -->
@@ -707,11 +708,11 @@
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905335742631">0533 574 2631</a>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905342456030">0534 245 6030</a>
+            <a href="tel:+905335742631">0533 574 2631</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
