--- a/ekskavator.html
+++ b/ekskavator.html
@@ -166,8 +166,8 @@
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -195,7 +195,7 @@
                 <li class="dropdown">
                   <a href="product.html">ÜRÜNLERİMİZ</a>
                   <ul>
-                    <li><a href="elektrikli-forklift.html">ELEKTRİKLİ FORKLİFT</a></li>
+                    <li><a href="elektrikli-forklift.html">AKÜLÜ-LİTYUM FORKLİFT</a></li>
                     <li>
                       <a href="dizel-forklift.html">DİZEL FORKLİFT</a>
                     </li>
@@ -585,7 +585,7 @@
               <h2 class="footer-widget__title">ÜRÜNLERİMİZ</h2>
               <!-- /.footer-widget__title -->
               <ul class="list-unstyled footer-widget__links">
-                <li><a href="elektrikli-forklift.html">Elektrikli Forklift</a></li>
+                <li><a href="elektrikli-forklift.html">Akülü-Lityum Forklift</a></li>
                 <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
                 <li><a href="ekskavator.html">Ekskavatör</a></li>
                 <li><a href="makasli-kaldirma-platformu.html">Makaslı Kaldırma Platformu</a></li>
@@ -612,11 +612,11 @@
                   </li>
                   <li>
                     <span class="icon-phone-call"></span>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                   </li>
                   <li>
                     <span class="icon-phone-call"></span>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                   </li>
                 </ul>
                 <!-- /.list-unstyled footer-widget__info -->
@@ -744,11 +744,11 @@
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905335742631">0533 574 2631</a>
+          <a href="tel:+905342456030">0534 245 6030</a>
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905342456030">0534 245 6030</a>
+          <a href="tel:+905335742631">0533 574 2631</a>
         </li>
       </ul>
       <!-- /.mobile-nav__contact -->
@@ -822,11 +822,11 @@
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905335742631">0533 574 2631</a>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905342456030">0534 245 6030</a>
+            <a href="tel:+905335742631">0533 574 2631</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
