--- a/elektrikli-forklift-ht2,5t-b.html
+++ b/elektrikli-forklift-ht2,5t-b.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elektrikli Forklift HT-2.5T-B</title>
+    <title>Akülü-Lityum Forklift HT-2.5T-B</title>
 
     <meta
         content="SETA Lifting, sektörde kalite ve güvenilirliği temsil eden bir marka olarak, müşterilerine geniş bir yelpazede yük kaldırma ve taşıma çözümleri sunmaktadır."
@@ -167,8 +167,8 @@
                                 <div class="main-header__call__inner">
                                     <span class="main-header__call__tagline">BİZİ ARAYIN</span>
                                     <!-- /.main-header__call__tagline -->
-                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                                    <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                                    <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                                     <!-- /.main-header__call__number -->
                                 </div>
                                 <!-- /.main-header__call__inner -->
@@ -196,7 +196,7 @@
                                 <li class="dropdown">
                                     <a href="product.html">ÜRÜNLERİMİZ</a>
                                     <ul>
-                                        <li><a href="elektrikli-forklift.html">ELEKTRİKLİ FORKLİFT</a></li>
+                                        <li><a href="elektrikli-forklift.html">AKÜLÜ-LİTYUM FORKLİFT</a></li>
                                         <li>
                                             <a href="dizel-forklift.html">DİZEL FORKLİFT</a>
                                         </li>
@@ -252,10 +252,10 @@
             <div class="page-header__bg" style="background-image: url(assets/images/resources/s-1.webp);"></div>
             <!-- /.page-header__bg -->
             <div class="container">
-                <h2 class="page-header__title">ELEKTRİKLİ FORKLİFT HT - 2.5T-B</h2>
+                <h2 class="page-header__title">AKÜLÜ-LİTYUM FORKLİFT HT - 2.5T-B</h2>
                 <ul class="boskery-breadcrumb list-unstyled">
                     <li><a href="/">aNASAYFA</a></li>
-                    <li><span>ELEKTRİKLİ FORKLİFT HT - 2.5T-B</span></li>
+                    <li><span>AKÜLÜ-LİTYUM FORKLİFT HT - 2.5T-B</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
         </section><!-- /.page-header -->
@@ -328,7 +328,7 @@
                         <div class="product-details__content">
                             <div class="product-details__top">
                                 <div class="product-details__top__left">
-                                    <h3 class="product-details__name">ELEKTRİKLİ FORKLİFT HT - 2.5T-B</h3>
+                                    <h3 class="product-details__name">AKÜLÜ-LİTYUM FORKLİFT HT - 2.5T-B</h3>
                                     <h4 class="product-details__price">2.5 TON</h4>
                                 </div>
                                 <a href="https://www.youtube.com/watch?v=C7-CkhpEHeQ"
@@ -688,7 +688,7 @@
                                 <h2 class="footer-widget__title">ÜRÜNLERİMİZ</h2>
                                 <!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__links">
-                                    <li><a href="elektrikli-forklift.html">Elektrikli Forklift</a></li>
+                                    <li><a href="elektrikli-forklift.html">Akülü-Lityum Forklift</a></li>
                                     <li><a href="dizel-forklift.html">Dizel Forklift</a></li>
                                     <li><a href="ekskavator.html">Ekskavatör</a></li>
                                     <li><a href="makasli-kaldirma-platformu.html">Makaslı Kaldırma
@@ -717,11 +717,11 @@
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
                                         </li>
                                         <li>
                                             <span class="icon-phone-call"></span>
-                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
                                         </li>
                                     </ul>
                                     <!-- /.list-unstyled footer-widget__info -->
@@ -857,11 +857,11 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905335742631">0533 574 2631</a>
+                    <a href="tel:+905342456030">0534 245 6030</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+905342456030">0534 245 6030</a>
+                    <a href="tel:+905335742631">0533 574 2631</a>
                 </li>
             </ul>
             <!-- /.mobile-nav__contact -->
@@ -935,11 +935,11 @@
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905335742631">0533 574 2631</a>
+                        <a href="tel:+905342456030">0534 245 6030</a>
                     </li>
                     <li>
                         <span class="icon-phone-call"></span>
-                        <a href="tel:+905342456030">0534 245 6030</a>
+                        <a href="tel:+905335742631">0533 574 2631</a>
                     </li>
                 </ul>
                 <!-- /.sidebar-one__info__list -->
