--- a/en-product.html
+++ b/en-product.html
@@ -166,8 +166,8 @@
                 <div class="main-header__call__inner">
                   <span class="main-header__call__tagline">CALL US</span>
                   <!-- /.main-header__call__tagline -->
-                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a><br>
-                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a>
+                  <a href="tel:+905342456030" class="main-header__call__number">0 534 245 6030</a><br>
+                  <a href="tel:+905335742631" class="main-header__call__number">0 533 574 2631</a>
                   <!-- /.main-header__call__number -->
                 </div>
                 <!-- /.main-header__call__inner -->
@@ -195,7 +195,7 @@
                 <li class="dropdown">
                   <a href="en-product.html">PRODUCTS</a>
                   <ul>
-                    <li><a href="en-elektrikli-forklift.html">ELECTRIC FORKLIFT</a></li>
+                    <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                     <li>
                       <a href="en-dizel-forklift.html">DIESEL FORKLIFT</a>
                     </li>
@@ -267,7 +267,7 @@
               <div class="product__categories product__sidebar__item">
                 <h3 class="product__sidebar__title product__categories__title">CATEGORIES</h3>
                 <ul class="list-unstyled">
-                  <li><a href="en-elektrikli-forklift.html">Elektric Forklift</a></li>
+                  <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                   <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                   <li><a href="en-ekskavator.html">Excavator</a></li>
                   <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
@@ -291,7 +291,7 @@
                   </div>
 
                   <div class="product__item__content">
-                    <h4 class="product__item__title"><a href="en-elektrikli-forklift.html">Elektric Forklift</a></h4>
+                    <h4 class="product__item__title"><a href="en-elektrikli-forklift.html">Lithium Forklift</a></h4>
                     <!-- /.product-title -->
                     <a href="en-elektrikli-forklift.html" class="boskery-btn product__item__link">
                       <span class="boskery-btn__hover"></span>
@@ -469,7 +469,7 @@
                 <h2 class="footer-widget__title">PRODUCTS</h2>
                 <!-- /.footer-widget__title -->
                 <ul class="list-unstyled footer-widget__links">
-                  <li><a href="en-elektrikli-forklift.html">Electric Forklift</a></li>
+                  <li><a href="en-elektrikli-forklift.html">Lithium Forklift</a></li>
                   <li><a href="en-dizel-forklift.html">Diesel Forklift</a></li>
                   <li><a href="en-ekskavator.html">Excavator</a></li>
                   <li><a href="en-makasli-kaldirma-platformu.html">Scissor Lift Platform</a></li>
@@ -495,13 +495,13 @@
                       <a href="mailto:info@setalifting.com">info@setalifting.com</a>
                     </li>
                     <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905335742631">0533 574 2631</a>
-                    </li>
-                    <li>
-                      <span class="icon-phone-call"></span>
-                      <a href="tel:+905342456030">0534 245 6030</a>
-                    </li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905342456030">0534 245 6030</a>
+                                        </li>
+                                        <li>
+                                            <span class="icon-phone-call"></span>
+                                            <a href="tel:+905335742631">0533 574 2631</a>
+                                        </li>
                   </ul>
                   <!-- /.list-unstyled footer-widget__info -->
                   <div class="footer-widget__social">
@@ -629,11 +629,11 @@
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905335742631">0533 574 2631</a>
+          <a href="tel:+905342456030">0534 245 6030</a>
         </li>
         <li>
           <i class="fa fa-phone-alt"></i>
-          <a href="tel:+905342456030">0534 245 6030</a>
+          <a href="tel:+905335742631">0533 574 2631</a>
         </li>
       </ul>
       <!-- /.mobile-nav__contact -->
@@ -707,11 +707,11 @@
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905335742631">0533 574 2631</a>
+            <a href="tel:+905342456030">0534 245 6030</a>
           </li>
           <li>
             <span class="icon-phone-call"></span>
-            <a href="tel:+905342456030">0534 245 6030</a>
+            <a href="tel:+905335742631">0533 574 2631</a>
           </li>
         </ul>
         <!-- /.sidebar-one__info__list -->
